<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/chooseDestination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:text="@string/chooseDestination"
        tools:ignore="RtlSymmetry" />

    <RadioGroup
        android:id="@+id/countries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/chooseDestination"
        android:paddingStart="15dp"
        tools:ignore="RtlSymmetry">

        <RadioButton
            android:id="@+id/india"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/india" />
        <RadioButton
            android:id="@+id/turkey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/turkey" />
        <RadioButton
            android:id="@+id/mexico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mexico" />
        <RadioButton
            android:id="@+id/italy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/italy" />
    </RadioGroup>

    <TextView
        android:id="@+id/exchangeRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/countries"
        android:layout_marginTop="50dp"
        android:paddingTop="10dp"
        android:paddingStart="15dp"
        android:text="@string/exchangeRate"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/exchangeRateNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/exchangeRate"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/exchangeRate"
        android:autofillHints=""
        android:hint="@string/introduceRate"
        android:inputType="numberDecimal"
        android:text=""
        android:textColorHint="#A1887F"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/exchangeRate"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/done"
        android:onClick="donePressed" />

</RelativeLayout>